--- a/lab_advanced/lab5/lab_CUDA/CMakeLists.txt
+++ b/lab_advanced/lab5/lab_CUDA/CMakeLists.txt
@@ -9,5 +9,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
-add_executable(test test.cu)
-#add_executable(test kernel.cu)
+#add_executable(test test.cu)
+add_executable(test kernel.cu)
